# template-metaprogramming

./: .gitignore  CMakeLists.txt  README.md
cmake-modules/: NanoLogConfig.cmake
src/: CMakeLists.txt  abs-value-compiletime.cpp  abs-value-runtime.cpp  gcd-compiletime.cpp  gcd-runtime.cpp
utility/: calculate-perf-stats.sh
